# generative-ai-toolkit-for-sap-hana-cloud

./: .gitignore  INTRODUCTION.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
doc/: bas-js-call-hana-ai-architecture.en.md  bas-js-call-hana-ai-architecture.md  changlog.rst  hana_ai.agents.rst  hana_ai.rst  hana_ai.tools.rst
doc/agents/: hana_ai.agents.context_agent.ContextAgent.rst
doc/tools/: hana_ai.tools.hana_ml_tools.additive_model_forecast_tools.MassiveAdditiveModelForecastFitAndSave.rst  hana_ai.tools.hana_ml_tools.additive_model_forecast_tools.MassiveAdditiveModelForecastLoadModelAndPredict.rst  hana_ai.tools.hana_ml_tools.dataset_prep_tools.ImportCSVToTableTool.rst  hana_ai.tools.hana_ml_tools.dataset_prep_tools.SplitTableForForecastingTool.rst  hana_ai.tools.toolkit.HANAMLToolkit.rst
examples/: mcp_http_server.py  mcp_stdio_server.py
nutest/testscripts/: test_context_agent_e2e_scenarios.py  test_context_agent_memory_commands.py  test_context_agent_skills.py  test_context_agent_tool_recovery.py
nutest/testscripts/tools/: conftest.py  test_additive_model_forecast_tools.py  test_forecast_line_plot_validation.py  test_massive_additive_model_forecast_live_tools.py  test_massive_additive_model_forecast_tools.py  test_massive_automatic_model_normalization.py  test_mcp_server_reload_connection_context_from_env_http.py  test_mcp_server_reload_connection_context_from_env_stdio.py  test_prediction_auto_repair.py  test_ts_check_tools.py
src/hana_ai/: __init__.py  langchain_compat.py  smart_dataframe.py
src/hana_ai/agents/: context_agent.py  (+6 more)
(+28 files in other folders)
